# SurfQuakeCore

./: .gitignore  README.md  analysis_config.yaml  base_data_class.py  eventos.csv  install.sh  main.py  obspy_utils.py  pyproject.toml  requirements.txt  setup.py  structures.py  test.py
.github/workflows/: python-app.yml
examples/: check_magnitudes.py  create_station_xml.py  manage_project_new.py  mangage_project.py  run_algebra.py  run_catalog.py  run_magnitudes_example.py  run_mti_example.py  run_nll_example.py  run_picking.py  run_real.py  run_source_example.py  run_surfquake_demo.sh  trace_algebra.py
examples/configs/: algebra.yaml  characteristic_functions.yaml  config_all.yaml  nll_config.ini  plotting_config.yaml  rename.yaml  script_template.py  spectral_config.yaml  stream_config.yaml  typical_config.yaml
examples/earthquake_locate/: catalog.txt
examples/earthquake_locate/config/: nll_config.ini
examples/earthquake_locate/model1D/: modelP
examples/earthquake_locate/nll_picks/: nll_input.txt
examples/earthquake_locate/temp/: input.txt
examples/magnitudes/config/: source_spec.conf
examples/mti/: run_boris.py  run_real.py
examples/mti/list_earthquakes/: E1.ini  E2.ini
examples/mti/project/: surfquake_project_test.pkl
examples/source_estimations/: source_spec.conf  source_summary
examples/source_estimations/config/: source_spec.conf
examples/source_estimations/locations/: location.20220201.020301.grid0.loc.hyp  (+28 more)
notes/: create_package.txt
sources/isola_source/: Makefile  Makefile_win  gr_xyz.f90
surfquakecore/: __init__.py
surfquakecore/DataProcessing/: metadata_manager.py
surfquakecore/PPSD/: PPSD.py  plotPPS.py
surfquakecore/Structures/: structures.py
surfquakecore/ant/: aftan.py  ant_refs.py  convert_sac2h5.py  crossstack.py  cwt_aftan.py  dbstorage.py  process_ant.py  signal_processing_tools.py
surfquakecore/arrayanalysis/: array_analysis.py  beamforming_tools.py  beamrun.py
surfquakecore/binaries/: __init__.py  select_binaries.py
surfquakecore/cli/: __init__.py  main.py
surfquakecore/coincidence_trigger/: cf_SNR.py  cf_kurtosis.py  coincidence_parse.py  coincidence_trigger.py  structures.py
surfquakecore/config_templates/: config_all.yaml  config_partial.yaml  events.csv  metadata_full_create  metadata_simple_create.csv  mti_config.ini  real_config.ini  typical_config.yaml
surfquakecore/cython_module/: whiten.pyx
surfquakecore/data_processing/: analysis.py  analysis_events.py  metadata_manager.py  processing_methods.py  seismicUtils.py  seismogram_analysis.py  source_tools.py  spectral_tools.py  wavelet.py
surfquakecore/earthquake_location/: nll_parse.py  run_nll.py  structures.py
surfquakecore/first_polarity/: first_polarity.py  focmecobspy.py  generate_input.py  get_pol.py  polarity_utils.py
surfquakecore/magnitudes/: link_files.py  run_magnitudes.py  source_tools.py  ssp_process_traces_mod.py  ssp_setup_mod.py  ssp_wave_arrival_mod.py  structures.py
surfquakecore/models/: __init__.py  global_earth_model.nd
surfquakecore/moment_tensor/: mti_parse.py  read_log.py  structures.py
surfquakecore/notes/: create_command_package.txt  create_package.txt  create_package_min.txt
surfquakecore/phasenet/: phasenet_handler.py
surfquakecore/project/: surf_project.py
surfquakecore/real/: real_core.py  real_manager.py  real_parse.py  structs.py  structures.py
surfquakecore/seismoplot/: availability.py  crosshair.py  interactive.py  ket_matplotlib.txt  plot.py  plot_command_prompt.py  spanselector.py
surfquakecore/spectral/: cwtrun.py  specrun.py
surfquakecore/utils/: __init__.py  base_data_class.py  cast.py  configuration_utils.py  conversion_utils.py  create_station_xml.py  geodetic_conversion.py  json_utils.py  manage_catalog.py  nll_org_errors.py  obspy_utils.py  read_nll_performance.py  subprocess_utils.py  system_utils.py
tests/: run_example.py  test.py  test_cut.py  test_polarity.py  test_project.py
tests/test_moment_tensor/: test_moment_tensor_inversion_config.py  test_moment_tensor_inversion_run.py  test_mti_parse.py
tests/test_nll/: test_create_nll_run_input.py  test_nll_config.py
tests/test_real/: test_real_config.py  test_stations_real.py
tests/test_utils/: test_cast.py
(+135 files in other folders)
