[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["readme", "dependencies"]
name = "surfquakecore"
version = "0.0.1"
authors = [
  { name="Roberto Cabieces & Thiago Junqueira", email="rcabdia@roa.es"},
]
description = "SurfQuake Core"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://projectisp.github.io/ISP_tutorial.github.io/"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "examples*"]

[tool.setuptools.package-data]
"surfquakecore.bin.linux_bin" = ["mti_green/*", "NLL/*", "REAL/*"]
"surfquakecore.bin.mac_bin" = ["mti_green/*", "NLL/*", "REAL/*"]
"surfquakecore.bin.win_bin" = ["mti_green/*"]


