[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["readme", "dependencies"]
name = "surfquakecore"
version = "0.0.1"
authors = [
  { name="Roberto Cabieces & Thiago Junqueira", email="rcabdia@roa.es"},
]
description = "SurfQuake Core"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://projectisp.github.io/ISP_tutorial.github.io/"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "examples*"]

[tool.setuptools.package-data]
"surfquakecore.binaries.linux_bin" = ["mti_green/*", "NLL/*", "REAL/*"]
"surfquakecore.binaries.mac_bin" = ["mti_green/*", "NLL/*", "REAL/*"]
"surfquakecore.binaries.win_bin" = ["mti_green/*"]
# TODO Why do u need all this?? lots of data here seems not necessary.
# TODO To me loc_structure seems output data...If thats the case this should be handle outside the project structure folder
#"surfquakecore.earthquake_location.loc_structure" = [
#    "ak135/*", "loc/*", "local_models/*", "loc/*", "model1D/*",
#    "model3D/*", "obs/*", "run/*", "stations/*", "temp/*", "time/*"
#]
"surfquakecore.models" = ["190703-214543/*", "global_earth_model.nd"]
"surfquakecore.real" = ["tt_db/*"]

[project.scripts]
surfquake = "surfquakecore.cli:main"
