[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["readme", "dependencies"]
name = "surfquake"
version = "0.1.6"
authors = [
  { name="Roberto Cabieces & Thiago Junqueira", email="rcabdia@roa.es"},
]
description = "SurfQuake Core"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://projectisp.github.io/surfquaketutorial.github.io/"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "examples*"]
where = ["."]

[tool.setuptools.package-data]
"surfquakecore.binaries.linux_bin" = ["mti_green/*", "NLL/*", "REAL/*", "FOCMEC/*"]
"surfquakecore.binaries.mac_bin" = ["mti_green/*", "NLL/*", "REAL/*", "FOCMEC/*"]
"surfquakecore.binaries.mac_bin_m" = ["mti_green/*", "NLL/*", "REAL/*", "FOCMEC/*"]
"surfquakecore.binaries.win_bin" = ["mti_green/*"]

"surfquakecore.earthquake_location.loc_structure" = [
    "ak135/*", "loc/*", "local_models/*", "loc/*", "model1D/*",
    "model3D/*", "obs/*", "run/*", "stations/*", "temp/*", "time/*"
]
"surfquakecore.models" = ["190703-214543/*", "global_earth_model.nd"]
"surfquakecore.real" = ["tt_db/*"]
"surfquakecore.cython_module" = ["*.pyx", "*.pxd", "*.h"]

"surfquakecore.first_polarity" = ["focmec_bash/*"]

[project.scripts]
surfquake = "surfquakecore.cli:main"

[tool.setuptools]
include-package-data = true


